--- a/MVCTestingSample/appsettings.json
+++ b/MVCTestingSample/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "ProductTestingDb": "Server=(localdb)\\mssqllocaldb;Database=ProductTestingDb;Trusted_Connection=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
